# setlist-onboarding-project

./: .gitignore  Makefile  README.md  docker-compose.yaml
client/: package.json
client/src/: AddSetlist.tsx  AddSong.js  AddSong.tsx  AllSetlists.tsx  App.js  App.tsx  Navbar.tsx  Setlist.tsx  SingleSetlist.tsx  Song.js  Song.tsx  index.css  types.tsx  useInput.js  useSetlist.tsx  useSong.tsx
server/: .cache  Dockerfile  app.py  models.py  pyproject.toml  spotify.py
server/app/: __init__.py
server/app/blueprints/: setlist_blueprint.py  songs_blueprint.py  spotify_blueprint.py
server/app/models/: Setlist.py  Song.py  User.py
server/migrations/versions/: 3e1c815f2841_.py  412e879f986c_updated_user_model.py  45bf753b88d7_add_order_index_column_to_song_table.py  6e80d29df3fb_add_user_model.py  934d7fd32bf3_initial_migration.py  93b60db424f2_.py  cbe297e85554_.py  e6cd71491ece_added_unique_constraint_to_email_column_.py
server/tests/: test_models.py
