[tool.poetry]
name = "setlist"
version = "0.1.0"
description = "app for creating a setlist"
authors = ["Anat Hochberg <ahochberg@keplergrp.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.2"
Flask-Migrate = "^3.1.0"
spotipy = "^2.19.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
